--- a/app/views/static_pages/help_articles.html.erb
+++ b/app/views/static_pages/help_articles.html.erb
@@ -9,6 +9,40 @@ created as <em>Articles</em> with different settings on some of the
 parameters.
 </p>
 
+<p>
+To create a new article, go to the Articles index page and click on the
+<em>New Article</em> button in the top-right.  To get to the Articles index page,
+select <em>Edit Content</em> in the <em>Account</em> menu, and then click on the
+<em>Articles</em> box.
+</p>
+
+<p>
+There are two ways to edit an existing article.  First, one can go to the Articles
+index page and click the <em>Edit</em> link to the right of the article's
+summary blurb.  This will take you to the Edit form for that article - make the
+desired changes to the fields in that form and then click the Save button at
+the bottom when done.  You can also get to the edit form for an article which
+you are currently reading by simply going to the navigation window at the top of
+the browser, adding "/edit" to the end, and clicking the Enter key on the keyboard.
+That is to say, if the path to the article of interest ends with "articles/35",
+you change it to "articles/35/edit" and type return.
+</p>
+
+<h5>Articles Index Page</h5>
+<p>
+To get to the Articles index page, select <em>Edit Content</em> in the
+<em>Account</em> menu, and then click on the <em>Articles</em> box.  On the
+index page there is a button at the top-right for creating a <em>New Article</em>.
+At the top-left is a selector which controls what set of articles will be shown.
+To display every existing article, choose <em>All</em>.  If you are interested
+in seeing only those articles which are displayed on the front page of the site,
+click the <em>Front Page</em> selection.  The <em>News</em> selection shows only
+articles having no menu entry specified - those which will not be displayed under
+any menu, but only the <em>News</em> page, and perhaps also the front page of
+the site.  The <em>Menus</em> selection shows the opposite of the <em>News</em>
+selection - only those articles which do have a menu location specified.
+</p>
+
 <h5>Drafts</h5>
 <p>When an article is being written, but is still in draft form, it can be
 saved without immediately showing up on the website.  It will not appear on the
@@ -20,8 +54,9 @@ as a <em>draft</em>.
 <p>
 One of the parameters that can be set on each article is a <em>Ranking</em>
 that governs the order in which groups of articles are displayed.  Higher ranked
-articles are displayed first.  Articles with the same ranking are displayed with
-the newest (or most recently updated) article shown first.
+articles are displayed first, from a highest priority of 10 to lowest of 1.
+Articles with the same ranking are displayed with the newest (or most recently
+updated) article shown first.
 </p>
 
 <h5>Front Page</h5>
@@ -30,18 +65,22 @@ Important announcements to be displayed on the front page are noted by setting
 the <em>Front Page</em> flag on that article.  A summary blurb a few lines long
 will be shown for each article along with a <em>Read More</em> link that will
 take the reader to the full text of the story.  If the <em>Summary</em> field
-is filled in that content will be used for this blurb, otherwise the first few
+is filled in, that content will be used for this blurb, otherwise the first few
 lines of the article's body are used.
 </p>
 
 <h5>Menu System</h5>
 <p>
-In many cases it will be desirable to group new articles with related content
+In many cases, it will be desirable to group new articles with related content
 under the menubar.  To do this, fill in the <em>Menu Path</em> field with the
 list of menu entries that should be followed to get to this article.  The
 value to enter in this field will be the sequence of menu items taken to get
 to this article's page, starting with the value in the menubar.  The entries
 are separated by colons.
+</p>
+
+<p>
+Staff bio entries should have a menu value of <em>About:Staff</em>.
 </p>
 
 <h5>News Page</h5>
