--- a/app/views/static_pages/help_events.html.erb
+++ b/app/views/static_pages/help_events.html.erb
@@ -65,7 +65,7 @@ all other days left disabled.
 
 <p>
 Recurring events that happen every week may sometimes have a conflict arise that
-forces a given week to be cancelled.  The general every-week event be left as is,
-with one or more dates entered in the <em>Cancelled Dates</em> field (comma
+forces a given week to be cancelled.  The general every-week event can be left as
+is, with one or more dates entered in the <em>Cancelled Dates</em> field (comma
 separated) causing the listed dates to be skipped.
 </p>
