--- a/app/views/static_pages/help_site_info.html.erb
+++ b/app/views/static_pages/help_site_info.html.erb
@@ -6,7 +6,25 @@ and thus won't need editing.  This includes items such as church name, address,
 phone number, etc.
 </p>
 <p>
-The one item in this page that is likely to occasionally need changing is the
-<em>Weekly Schedule</em> listing that appears in the left sidebar.  To add or
-modify entries in that list go to the <em>Site Info</em> page.
+There are two items in the SiteInfo collection that are more likely to need
+occasional edits - <em>Weekly Schedule</em> and <em>Menubar</em>.
+</p>
+<p>
+The <em>Weekly Schedule</em> field controls what appears in the box with that
+title in the left sidebar of the display.  To modify or add entries in that
+sidebar box, edit this field on the Site Info Edit page.  The documentation
+on <em>Formatting</em> found at the bottom of the <em>Articles</em> help page
+also applies to content in this field.
+</p>
+<p>
+The <em>Menubar</em> field is a space-separated list of names which will be
+added to the menubar at the top of the display.  The menus under these items will
+provide the access to most of the <em>Articles</em> added to the site.  The only
+exception are <em>News</em> stories which will be listed on the <em>News</em>
+page without having any <em>Menu</em> value listed when that Article is created.
+An article that is intended to appear in a specific menu will need to be in a
+menu or sub-menu underneath one of the values listed in this field.
+</p>
+<p>
+See the <em>Menu</em> discussion on the <em>Articles</em> help page for more detail.
 </p>
