--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -9,7 +9,7 @@
 <% elsif @article.gallery.blank? == false %>
 	<div class="slide-photo">
 		<% gallery = Gallery.find_by_name(@article.gallery) %>
-		<%= photo_tag_to_original(cover_photo(gallery.photos), :slide) if gallery %>
+		<%= photo_tag_to_original(gallery.cover_photo, :slide) if gallery %>
 	</div>	
 <% end %>
 
