Update contact page

--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,3 +1,7 @@
 <h1>Contact Us</h1>
 
-<p>Drop us a line.</p>
+<h5>Phone: <%= @site_info.phone %></h5>
+
+<h5>Address: <%= @site_info.address %></h5>
+
+<h5>Email: mhbc@aol.com</h5>
