--- a/app/views/static_pages/help_articles.html.erb
+++ b/app/views/static_pages/help_articles.html.erb
@@ -33,6 +33,11 @@ you change it to "articles/35/edit" and type return.
 To get to the Articles index page, select <em>Edit Content</em> in the
 <em>Account</em> menu, and then click on the <em>Articles</em> box.  On the
 index page there is a button at the top-right for creating a <em>New Article</em>.
+The articles are grouped into pages. To see the next page of articles, or to
+quickly jump forward to a particular page of the index listing, there is a page
+selector at both the top and bottom of the index listing.
+</p>
+<p>
 At the top-left is a selector which controls what set of articles will be shown.
 To display every existing article, choose <em>All</em>.  If you are interested
 in seeing only those articles which are displayed on the front page of the site,
@@ -40,7 +45,15 @@ click the <em>Front Page</em> selection.  The <em>News</em> selection shows only
 articles having no menu entry specified - those which will not be displayed under
 any menu, but only the <em>News</em> page, and perhaps also the front page of
 the site.  The <em>Menus</em> selection shows the opposite of the <em>News</em>
-selection - only those articles which do have a menu location specified.
+selection - only those articles which do have a menu location specified.  To show
+only those articles that have not yet had their <em>Publish</em> flag set, select
+the <em>Drafts</em> choice.
+</p>
+
+<p>
+Under the selector that filters which set of articles will be listed is a second
+selector.  This one controls the order in which the articles will be displayed -
+either <em>Alphabetically</em> or in time sequence of when they were last edited.
 </p>
 
 <h5>Drafts</h5>
