Add Facebook link to footer and contact page

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -412,6 +412,10 @@ input, textarea, select, .uneditable-input {
 
 /* miscellaneous */
 
+#facebook_logo {
+    margin-top: 50px;
+}
+
 cite {
 	font-style: italic;
 }
