--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,5 +1,6 @@
 <footer class="footer">
 	<small>
+        <%= link_to image_tag('facebook_logo_20.jpg'), @site_info.facebook %>
 		<span class="info"><%= @site_info.title %></span>
 		<span class="info"><%= @site_info.address %></span>
 		<span class="info"><%= @site_info.phone %></span>
