--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,7 +1,11 @@
 <h1>Contact Us</h1>
 
-<h5>Phone: <%= @site_info.phone %></h5>
+<h4>Phone: <%= @site_info.phone %></h4>
 
-<h5>Address: <%= @site_info.address %></h5>
+<h4>Address: <%= @site_info.address %></h4>
 
-<h5>Email: mhbc@aol.com</h5>
+<h4>Email: mhbc@aol.com</h4>
+
+<div id="facebook_logo">
+    <%= link_to image_tag('facebook_logo_80.jpg'), @site_info.facebook %>
+</div>
