Add New Event button to Event Index page; add valid article check to Event validation

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,5 +1,12 @@
 <h1>All events</h1>
 
+<div class="row">
+	<div class="new-content-button pull-right">
+		<%= link_to "New Event", new_event_path, class: "link_button" %>
+		<br></br>
+	</div>
+</div>
+
 <%= will_paginate %>
 
 <ul class="simple-index">
