--- a/app/views/site_infos/edit.html.erb
+++ b/app/views/site_infos/edit.html.erb
@@ -9,6 +9,10 @@
             <%= f.input :phone %>
             <%= f.input :address %>
             <%= f.input :email %>
+            <%= f.input :logo, placeholder: 'Name of photo to use on left of banner area' %>
+            <%= f.input :bannerpic, placeholder: 'Name of photo to use on right of banner area' %>
+            <%= f.input :logowidth, placeholder: 'Percentage of banner width to use for logo' %>
+
             <%= f.input :weekly, :as => :text, :input_html => { :rows => 10 } %>
 
 			<%= f.submit 'Save changes', class: "btn btn-large btn-primary" %>
