--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,7 +1,7 @@
 <h1>Articles</h1>
 
 <% sb = SelectorBlock.new(self, "/articles?sort=#{@sort.downcase}&filter=",
-                             ['All', 'FrontPage', 'News', 'Menus', 'Drafts'],
+                             ['All', 'FrontPage', 'News', 'Blog', 'Menus', 'Drafts'],
                              @filter) %>
 
 <div class="row">
