Add About:Galleries link to photo galleries; minor updates to new-user help

--- a/app/views/static_pages/help_new_user.html.erb
+++ b/app/views/static_pages/help_new_user.html.erb
@@ -8,6 +8,11 @@ cover detail about upcoming events, reflections on past events, and
 description of various aspects of the church's mission and activities.
 </p>
 
+<p>
+If you want to refer back to this page later, you can find it by clicking the
+<em>Help</em> entry at the bottom of the <em>About</em> menu.
+</p>
+
 <h5>Footer</h5>
 
 <p>
@@ -99,3 +104,7 @@ sized image.  Click on the browser's <em>Back</em> button (arrow at top-left
 of browser window) to return to the gallery page.
 </p>
 
+<p>
+There are a collection of galleries on different subjects that can be found
+by clicking on the <em>Photo Galleries</em> item in the <em>About</em> menu.
+</p>
