Minor tweak to new-user help

--- a/app/views/static_pages/help_new_user.html.erb
+++ b/app/views/static_pages/help_new_user.html.erb
@@ -105,6 +105,6 @@ of browser window) to return to the gallery page.
 </p>
 
 <p>
-There are a collection of galleries on different subjects that can be found
+There are a collection of galleries on different subjects that can be viewed
 by clicking on the <em>Photo Galleries</em> item in the <em>About</em> menu.
 </p>
